Colaboratory を使用して作成しました

--- a/StableDiffusion_sample1.ipynb
+++ b/StableDiffusion_sample1.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyN8uqjvwcBvSSu6/LHmGz3b",
+      "gpuType": "A100",
+      "authorship_tag": "ABX9TyOUrM2jS+PzVKe3oKyqEvM9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,8 +25,29 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/shimesaba-type0/sd-colab/blob/sample1/StableDiffusion_sample1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/shimesaba-type0/sd-colab/blob/update1/StableDiffusion_sample1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 0. 必要ツールのインストール\n"
+      ],
+      "metadata": {
+        "id": "g-89hfQpiZU2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!nvidia-smi\n",
+        "!apt install aria2"
+      ],
+      "metadata": {
+        "id": "dbvUF_TNiizY"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -79,8 +100,10 @@
     {
       "cell_type": "code",
       "source": [
-        "!curl -Lo /content/stable-diffusion-webui/models/Stable-diffusion/BracingEvoMix_v1.safetensors https://huggingface.co/sazyou-roukaku/BracingEvoMix/resolve/main/BracingEvoMix_v1.safetensors\n",
-        "!curl -Lo /content/stable-diffusion-webui/models/Stable-diffusion/lastpieceMix_v1_fp16.safetensors https://huggingface.co/konapieces/lastpieceMix/resolve/main/models/lastpieceMix_v1_fp16.safetensors\n",
+        "!aria2c -d /content/stable-diffusion-webui/models/Stable-diffusion -o BracingEvoMix_v1.safetensors -x 2 https://huggingface.co/sazyou-roukaku/BracingEvoMix/resolve/main/BracingEvoMix_v1.safetensors\n",
+        "!aria2c -d /content/stable-diffusion-webui/models/Stable-diffusion -o lastpieceMix_v1_fp16.safetensors -x 2 https://huggingface.co/konapieces/lastpieceMix/resolve/main/models/lastpieceMix_v1_fp16.safetensors\n",
+        "#!curl -Lo /content/stable-diffusion-webui/models/Stable-diffusion/BracingEvoMix_v1.safetensors https://huggingface.co/sazyou-roukaku/BracingEvoMix/resolve/main/BracingEvoMix_v1.safetensors\n",
+        "#!curl -Lo /content/stable-diffusion-webui/models/Stable-diffusion/lastpieceMix_v1_fp16.safetensors https://huggingface.co/konapieces/lastpieceMix/resolve/main/models/lastpieceMix_v1_fp16.safetensors\n",
         "#!ls -lh /content/stable-diffusion-webui/models/Stable-diffusion/"
       ],
       "metadata": {
@@ -103,8 +126,11 @@
     {
       "cell_type": "code",
       "source": [
-        "!curl -Lo /content/stable-diffusion-webui/models/VAE/vae-ft-mse-840000-ema-pruned.safetensors https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\n",
-        "# !ls -lh /content/stable-diffusion-webui/models/VAE/"
+        "!aria2c -d /content/stable-diffusion-webui/models/VAE -o vae-ft-mse-840000-ema-pruned.safetensors -x 2 https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\n",
+        "#!curl -Lo /content/stable-diffusion-webui/models/VAE/vae-ft-mse-840000-ema-pruned.safetensors https://huggingface.co/stabilityai/sd-vae-ft-mse-original/resolve/main/vae-ft-mse-840000-ema-pruned.safetensors\n",
+        "# !ls -lh /content/stable-diffusion-webui/models/VAE/\n",
+        "#!sed '/\"sd_vae\"/s/default/vae-ft-mse-840000-ema-pruned.safetensors/' /content/stable-diffusion-webui/config.json -i\n",
+        "#!sed -n '/\"sd_vae\"/,1p' /content/stable-diffusion-webui/config.json"
       ],
       "metadata": {
         "id": "1Cwt0LQMI4aL"
@@ -136,7 +162,9 @@
       "cell_type": "code",
       "source": [
         "# ControlNet をクローンする\n",
-        "!git clone https://github.com/Mikubill/sd-webui-controlnet.git /content/stable-diffusion-webui/extensions/sd-webui-controlnet"
+        "!git clone https://github.com/Mikubill/sd-webui-controlnet.git /content/stable-diffusion-webui/extensions/sd-webui-controlnet\n",
+        "# Multi ControlNet を 3 にする\n",
+        "#!sed"
       ],
       "metadata": {
         "id": "WdyTfYaIO149"
@@ -161,7 +189,11 @@
     {
       "cell_type": "code",
       "source": [
-        "!curl -Lo /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_sd15_canny.pth https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_canny.pth"
+        "!aria2c -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/ -o control_sd15_canny.pth -x 2 https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_canny.pth\n",
+        "#!curl -Lo /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/control_sd15_canny.pth https://huggingface.co/lllyasviel/ControlNet/resolve/main/models/control_sd15_canny.pth\n",
+        "\n",
+        "!aria2c -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/ -o control_v11p_sd15_lineart.pth -x 2 https://huggingface.co/lllyasviel/ControlNet-v1-1/resolve/main/control_v11p_sd15_lineart.pth\n",
+        "!aria2c -d /content/stable-diffusion-webui/extensions/sd-webui-controlnet/models/ -o control_v1p_sd15_brightness.safetensors -x 2 https://huggingface.co/ioclab/ioc-controlnet/resolve/main/models/control_v1p_sd15_brightness.safetensors"
       ],
       "metadata": {
         "id": "-Vy1BgccUXp9"
